[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="Center/VBox"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="MusicVolume" type="HBoxContainer" parent="Center/VBox"]
layout_mode = 2
alignment = 1

[node name="MusicLabel" type="Label" parent="Center/VBox/MusicVolume"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Center/VBox/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0
step = 0.5
value = 0.0
custom_minimum_size = Vector2(360, 0)

[node name="MusicPercent" type="Label" parent="Center/VBox/MusicVolume"]
layout_mode = 2
text = "100%"

[node name="SfxVolume" type="HBoxContainer" parent="Center/VBox"]
layout_mode = 2
alignment = 1

[node name="SfxLabel" type="Label" parent="Center/VBox/SfxVolume"]
layout_mode = 2
text = "Sound"

[node name="SfxSlider" type="HSlider" parent="Center/VBox/SfxVolume"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0
step = 0.5
value = 0.0
custom_minimum_size = Vector2(360, 0)

[node name="SfxPercent" type="Label" parent="Center/VBox/SfxVolume"]
layout_mode = 2
text = "100%"

[node name="ResumeButton" type="Button" parent="Center/VBox"]
layout_mode = 2
text = "Resume"

[node name="ShopButton" type="Button" parent="Center/VBox"]
layout_mode = 2
text = "Shop"

[node name="Shop" type="VBoxContainer" parent="Center/VBox"]
visible = false
layout_mode = 2
alignment = 1

[node name="Coins" type="Label" parent="Center/VBox/Shop"]
layout_mode = 2
text = "Coins: 0"
horizontal_alignment = 1

[node name="BuyFrame2" type="Button" parent="Center/VBox/Shop"]
layout_mode = 2
text = "Buy Frame 2 (10)"

[node name="BuyBG2" type="Button" parent="Center/VBox/Shop"]
layout_mode = 2
text = "Buy Background 2 (20)"

[node name="BuyBG3" type="Button" parent="Center/VBox/Shop"]
layout_mode = 2
text = "Buy Background 3 (20)"

[node name="BuyBG4" type="Button" parent="Center/VBox/Shop"]
layout_mode = 2
text = "Buy Background 4 (20)"

